--- a/covid/covid_app/templates/covid_app/dashbord.html
+++ b/covid/covid_app/templates/covid_app/dashbord.html
@@ -47,10 +47,10 @@
         {#        </a>#}
         <div class="title-div">
             <img class="covid-icon" src="{% static 'covid_app/images/covid-icon.png' %}">
-            <a href="{% url 'covid_app:index' %}" class="logo-text">COVID-19</a>
+            <a href="{% url 'covid_app:dashboard' %}" class="logo-text">COVID-19</a>
         </div>
 
-        <a href="{% url 'covid_app:index' %}"
+        <a href="{% url 'covid_app:dashboard' %}"
            class="w3-bar-item w3-button w3-hide-small w3-right header-button" title="Dashboard">Dashboard
         </a>
         <a href="{% url 'covid_app:index' %}"
