--- a/covid/covid_app/templates/covid_app/index.html
+++ b/covid/covid_app/templates/covid_app/index.html
@@ -341,7 +341,7 @@
                     name: 'Age at death'
                 }
                 layout = {
-                    title: 'Age at death of COV-19 positive patients',
+                    title: 'Age of Dead Patients for COVID-19',
                     paper_bgcolor: 'rgb(243, 243, 243)',
                     plot_bgcolor: 'rgb(243, 243, 243)',
                     showlegend: false
@@ -379,7 +379,7 @@
                     name: 'Region case counts'
                 }
                 layout = {
-                    title: 'Region counts of KHS confirmed COV-19 cases',
+                    title: 'Region Counts of COVID-19 Cases Confirmed by Regional Hygiene Office',
                     paper_bgcolor: 'rgb(243, 243, 243)',
                     plot_bgcolor: 'rgb(243, 243, 243)',
                 };
@@ -396,13 +396,13 @@
         <div class="" style="width: 900px; margin: auto; border: 2px solid black">
             <button onclick="populateAreaTables()" type="button" id="area-tables-button"
                     class="w3-button w3-block w3-teal">
-                <b>Populate area tables</b>
+                <b>Populate Area Tables</b>
             </button>
             <button onclick="importData()" type="button" id="data-import-button" class="w3-button w3-block w3-teal">
-                <b>Import COVID-19 data</b>
+                <b>Import COVID-19 Data</b>
             </button>
             <button onclick="clearDb()" type="button" id="clear-db-button" class="w3-button w3-block w3-teal">
-                <b>Clear database</b>
+                <b>Clear Database</b>
             </button>
 
 
