--- a/covid/covid_app/static/covid_app/css/style.css
+++ b/covid/covid_app/static/covid_app/css/style.css
@@ -176,3 +176,41 @@ article p {
     vertical-align: middle;
     line-height: 46px;
 }
+
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border-bottom: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    border-right: 1px solid #ccc;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.graph-tab {
+    display: none;
+    /*border: 1px solid #ccc;*/
+    /*border-top: none;*/
+}
